# tachyons-to-tailwind

./: LICENSE  Main.hs  README.md  Tachyons.hs  hie.yaml  tachyons-test.css  tachyons-to-tailwind  tachyons-to-tailwind.cabal  tachyons.css
src/: FindReplace.hs  Main.hs  ReplacementRule.hs  SourceFile.hs  Tachyons.hs
